--- a/index.html
+++ b/index.html
@@ -241,6 +241,10 @@
                                     <input type="radio" name="h1" id="h1_psyche_jres"></input>
                                     <label for="h1_psyche_jres">PSYCHE 2DJ</label>
                                 </li>
+                                <li>
+                                    <input type="radio" name="h1" id="h1_psyche"></input>
+                                    <label for="h1_psyche">1D PSYCHE</label>
+                                </li>
                             </ul>
                         </div>
 
