--- a/index.html
+++ b/index.html
@@ -245,6 +245,10 @@
                                     <input type="radio" name="h1" id="h1_psyche"></input>
                                     <label for="h1_psyche">1D PSYCHE</label>
                                 </li>
+                                <li>
+                                    <input type="radio" name="h1" id="h1_tse_psyche"></input>
+                                    <label for="h1_tse_psyche">1D TSE-PSYCHE</label>
+                                </li>
                             </ul>
                         </div>
 
