Tiny layout changes

--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
 
                             <ol class="steps">
                                 <li>
-                                    <p>Make sure you have the appropriate AU programmes on your TopSpin installation.</p>
-                                    <p>A number of them already come installed with TopSpin. The newest versions, or any missing ones, can always be downloaded from here. [LINK TO BE ADDED]. Simply unzip that and copy everything into the folder <b>your_TopSpin_installation/exp/stan/nmr/au/src/user</b>. On Windows you can typically find the TopSpin installation in <span class="ms">C:\Bruker\TopSpinX.Y.Z</span>; on macOS/Linux it's <span class="ms">/opt/topspinx.y.z</span>.</p>
+                                    <p>Download the (most recent) processing AU programmes. (You only need to do this once.)</p>
+                                    <p>You can get a .zip file of AU programmes here. Simply unzip that and copy everything into the folder <b>your_TopSpin_installation/exp/stan/nmr/au/src/user</b>. On Windows you can typically find the TopSpin installation in <span class="ms">C:\Bruker\TopSpinX.Y.Z</span>; on macOS/Linux it's <span class="ms">/opt/topspinx.y.z</span>.</p>
                                 </li>
 
                                 <li>
