--- a/index.html
+++ b/index.html
@@ -408,6 +408,7 @@
             </dl>
         </div><!-- /faq -->
 
+        <span class="small">&copy; Jonathan Yong, 2020. Source code is available on <a href="https://github.com/yongrenjie/gennoah">GitHub</a>.</span>
     </div><!-- /main-wrapper -->
 
 
