--- a/index.html
+++ b/index.html
@@ -279,17 +279,22 @@
         <h2 id="faq_h2">FAQ</h2>
         <div id="faq">
 
-            <a href="#top">Back to top</a>
+            <span class="small"><a href="#top">Back to top</a></span>
 
             <ul id="faq_toc">
             </ul>
 
             <dl>
-
-                <dt id="faq_run">How do I run a NOAH experiment?</dt>
+                <dt id="faq_download">Just give me all the scripts, please</dt>
                 <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
                 <dd>
-                    <p>For the most part the setup is the same as for a standard 2D experiment. The nuclei involved should be configured in the same way as for a <sup>13</sup>C–<sup>1</sup>H experiment. There are two parameters which require additional consideration:</p>
+                    <p><a href="scripts/downloads/noah_all_2.0.zip">Click here to download the AU and Python scripts.</a> We assume you know what you're doing here. (If not, the other entries in this FAQ have more information.)</p>
+                </dd>
+
+                <dt id="faq_run">Acquiring a NOAH experiment: an overview</dt>
+                <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
+                <dd>
+                    <p>Nearly all of the setup is the same as for a standard <sup>13</sup>C–<sup>1</sup>H 2D experiment. There are two parameters which require additional consideration:</p>
                     <ul>
                         <li><b>NBL</b> should be set to the total number of modules, e.g. 4 for a MSCN supersequence. (Set this either in <span class="ms">ased</span>, or by typing <span class="ms">nbl</span> into the TopSpin command line.)</li>
                         <li><b>TD1</b> (i.e. TD in the F1 dimension) must be its original value multiplied by the total number of modules. For example, if you are running a supersequence with 4 modules and want to have 256 <i>t</i><sub>1</sub> increments in each module, TD1 must be set to 256 × 4 = 1024.</li>
@@ -329,51 +334,50 @@
                     <p>In a way, yes, but as far as we are aware it has to be hardcoded in the pulse programme (and often in a nontrivial way). That would make the pulse programme overly specialised for a particular sample/spectrometer, and isn't something we want to do here.</p>
                 </dd>
 
-                <dt id="faq_process">How do I process the acquired data?</dt>
+                <dt id="faq_process">Processing a NOAH experiment: an overview</dt>
                 <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
                 <dd>
 
-                    <p>If you acquired this data under automation, it should have already been set up such that your data is automatically processed. If your NOAH dataset was acquired with experiment number (expno) <i>m</i>, then check whether you already have datasets in expnos 1000<i>m</i> + 1 onwards. If those exist, then chances are these <i>are</i> the individual processed 2D spectra. If not, then read on...</p>
+                    <p>If you acquired this data under automation, it should have already been set up such that your data is automatically processed. If your NOAH dataset was acquired with experiment number (expno) <i>m</i>, then check whether you already have datasets in expnos (1000 × <i>m</i>) + 1 onwards. If those exist, then chances are these <i>are</i> the individual processed 2D spectra. If not, then read on...</p>
 
                     <ol class="steps">
-                        <li>
-                            <p>Download the (most recent) processing AU programmes. (You only need to do this once.)</p>
-                            <p>You can get a .zip file of AU programmes here. Simply unzip that and copy everything into the folder <b>your_TopSpin_installation/exp/stan/nmr/au/src/user</b>. On Windows you can typically find the TopSpin installation in <span class="ms">C:\Bruker\TopSpinX.Y.Z</span>; on macOS/Linux it's <span class="ms">/opt/topspinx.y.z</span>.</p>
-                        </li>
+                        <li>If you haven't already done so, <a href="scripts/downloads/noah_au_2.0.zip" download>download the newest versions of the processing AU programmes</a>. These should be placed inside the folder <b>&lt;TS&gt;/exp/stan/nmr/au/src/user</b>, where &lt;TS&gt; is your TopSpin installation location (<span class="ms">C:\Bruker\TopSpinX.Y.Z</span> for Windows, and <span class="ms">/opt/topspinx.y.z</span> for macOS/Linux).</li>
 
-                        <li>
-                            <p>Process the data by entering <span class="ms">splitx_au</span> into the TopSpin command-line.</p>
-                            <p>This will create new datasets with expnos beginning from (1000 × <i>m</i>) + 1, where <i>m</i> is the expno of the original NOAH data.</p>
-                            <p>If you are using macOS 10.15 (Catalina), please note there is a bug in TopSpin which causes a number of AU programmes to not work. On TopSpin 4.0.9, <span class="ms">splitx_au</span> will still work but many of the subsidiary AU programmes do not (especially those for <sup>15</sup>N or <sup>1</sup>H modules). On earlier versions, even <span class="ms">splitx_au</span> itself will not work. Unfortunately there is nothing we can do about it until Bruker releases a fix.</p>
-                        </li>
+                        <li>Process the data by entering <span class="ms">splitx_au</span> into the TopSpin command line. This will create new datasets with expnos beginning from (1000 × <i>m</i>) + 1, where <i>m</i> is the expno of the original NOAH data.</li>
                     </ol>
 
-                    If you are using old versions of the pulse programme, there is an additional step where you need to specify the userP1 through userP5 parameters. For example, in a BSC experiment, you would specify (userP1, userP2, userP3) = (noah_hmbc, noah_hsqc, noah_cosy) respectively. This is no longer necessary as long as you have downloaded the newest AU scripts and pulse programmes from this website. Please do get in touch if you need extra information on this.
+                    <p>If you are using old versions of the pulse programme, there is an additional step where you need to specify the userP1 through userP5 parameters. For example, in a BSC experiment, you would specify (userP1, userP2, userP3) = (noah_hmbc, noah_hsqc, noah_cosy) respectively. This is no longer necessary as long as you have downloaded the newest AU scripts and pulse programmes from this website. Please do get in touch if you need extra information on this.</p>
                 </dd>
 
-                <dt id="faq_nus">How do I use non-uniform sampling with NOAH sequences?</dt>
+                <dt id="faq_catalina">I'm using macOS Catalina and the processing doesn't work.</dt>
+                <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
+                <dd>
+                    <p>If you are using macOS 10.15 (Catalina), please note there is a bug in TopSpin which causes a number of AU programmes to not work. On TopSpin 4.0.9, <span class="ms">splitx_au</span> will still work but many of the subsidiary AU programmes do not. On earlier TopSpin versions, even <span class="ms">splitx_au</span> itself will not work. Unfortunately there is nothing we can do about it until Bruker releases a fix.</p>
+                </dd>
+
+                <dt id="faq_nus">Can non-uniform sampling be used with NOAH sequences?</dt>
                 <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
                 <dd>
                     <p>NUS can be enabled in the pulse sequence, but <b>not</b> in the conventional way of setting FnTYPE to 'non-uniform sampling'.</p>
 
                     <p>The steps below are applicable to all pulse programmes downloaded from this website.</p>
 
-                    <ol>
-                        <li>Get the newest version of <span class="ms">noah_nus.py</span> from here.</li>
+                    <ol class="steps">
+                        <li><a href="scripts/py/noah_nus.py" download>Download the newest version of <span class="ms">noah_nus.py</span>.</a></li>
 
-                        <li>Set up your experiment normally without NUS first, with the full value for TD1. Don't change any other parameters, such as FnTYPE. (Actually, the script will change this back if you do change it.)</li>
+                        <li>Set up your experiment normally without NUS first, with the full value for TD1. Don't change any other parameters, such as FnTYPE.</li>
 
                         <li>Specify the parameter NUSAmount and then run <span class="ms">noah_nus</span> in TopSpin.</li>
-
-                        <li>To disable NUS on a dataset where it was previously enabled, run <span class="ms">noah_nus off</span>.</li>
                     </ol>
+
+                    <p>To disable NUS on a dataset where it was previously enabled, run <span class="ms">noah_nus off</span>.</p>
 
                     <p>The optimal sampling density depends on what spectra you're trying to run as well as your sample. However, there is nothing special about NOAH in this regard: the typical considerations (e.g. how sparse the spectrum is) are the same, and whatever works for the individual spectra will also work on NOAH.</p>
 
                     <p>Please note that NUS is not currently compatible with the cnst37 and cnst39 scaling in <sup>1</sup>H and <sup>15</sup>N modules respectively. It is also not compatible with QF-style modules. If you set up an experiment with cnst37 or cnst39 &gt; 1 and then enable NUS, they will both be changed back to 1. (In principle this can be overcome, but it would add several more layers of complexity for the user, and we don't think it's worth the effort to implement.)</p>
                 </dd>
 
-                <dt id="faq_automation">How can NOAH spectra be set up for use in automation?</dt>
+                <dt id="faq_automation">How can NOAH experiments be set up for use in automation?</dt>
                 <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
                 <dd>
                     <p>The acquisition AU programme (AUNM) should be set to <span class="ms">au_zgcosy</span>, to avoid issues with <span class="ms">rga</span> (see above). The processing AU programme (AUNMP) should be set to <span class="ms">splitx_au</span>. If the pulse programmes and AU scripts are up-to-date, then there is no need to set the user processing parameters.</p>
