Implement nomodule script

--- a/index.html
+++ b/index.html
@@ -418,5 +418,9 @@
         <span class="small">&copy; Jonathan Yong, 2020. Source code is available on <a href="https://github.com/yongrenjie/gennoah">GitHub</a>.</span>
     </div><!-- /main-wrapper -->
 
+
+    <script nomodule type="text/javascript">
+        document.getElementById("spinner-container").innerHTML = "Your browser does not support JavaScript modules; please use an updated browser to view this website.";
+    </script>
 </body>
 </html>
