--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="pulprog.js" type="module"></script>
     <script src="faq.js" type="module"></script>
 
-    <title>NOAH Generator</title>
+    <title>NOAH pulse programme generator</title>
 </head>
 
 <body id="top">
