--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             </dl>
         </div><!-- /faq -->
 
-        <span class="small">&copy; Jonathan Yong, 2020. Source code is available on <a href="https://github.com/yongrenjie/gennoah">GitHub</a>.</span>
+        <span class="small">&copy; Jonathan Yong, 2020. Source code is available on <a href="https://github.com/yongrenjie/gennoah">GitHub</a>. Current version: v<span id="version"></span></span>
     </div><!-- /main-wrapper -->
 
 
