Update Catalina tip since the processing works now

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <dt id="faq_catalina">I'm using macOS Catalina and the processing doesn't work.</dt>
                 <span class="small"><a href="#top">Back to top of page</a> | <a href="#faq_h2">Back to FAQ</a></span>
                 <dd>
-                    <p>If you are using macOS 10.15 (Catalina), please note there is a bug in TopSpin which causes a number of AU programmes to not work. On TopSpin 4.0.9, <span class="ms">splitx_au</span> will still work but many of the subsidiary AU programmes do not. On earlier TopSpin versions, even <span class="ms">splitx_au</span> itself will not work. Unfortunately there is nothing we can do about it until Bruker releases a fix.</p>
+                    <p>Please update TopSpin to version 4.1.0 (or later). On older versions of TopSpin for macOS, there is a bug in TopSpin which causes certain parts of AU programmes to not work on Catalina.</p>
                 </dd>
 
                 <dt id="faq_nus">Can non-uniform sampling be used with NOAH sequences?</dt>
