Add C_HMBC_CFG dev module

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                             <input type="radio" name="hmbc" id="C_HMBC_NOF"></input>
                             <label for="C_HMBC_NOF">C_HMBC_NOF</label>
                         </li>
+                        <li>
+                            <input type="radio" name="hmbc" id="C_HMBC_CFG"></input>
+                            <label for="C_HMBC_CFG">C_HMBC_CFG</label>
+                        </li>
                     </ul>
                 </div>
             </div> <!-- /chooser-overall hmbc -->
