Add devmode seHSQC-TOCSY

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
                             <input type="radio" name="hsqct" id="HSQCT_HSQC"></input>
                             <label for="HSQCT_HSQC">HSQCT_HSQC</label>
                         </li>
+                        <li>
+                            <input type="radio" name="hsqct" id="HSQCT_SI"></input>
+                            <label for="HSQCT_SI">HSQCT_SI</label>
+                        </li>
                     </ul>
                 </div>
             </div> <!-- /chooser-overall hsqct -->
