Separate pulprog function from frontend code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/modules.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
 
-    <script src="pulprog.js" type="module"></script>
+    <script src="frontend.js" type="module"></script>
     <script src="faq.js" type="module"></script>
 
     <title>NOAH pulse programme generator</title>
