Make Node.js app run ES6 code

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/modules.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
 
-    <script src="frontend.js" type="module"></script>
-    <script src="faq.js" type="module"></script>
+    <script src="frontend.mjs" type="module"></script>
+    <script src="faq.mjs" type="module"></script>
 
     <title>NOAH pulse programme generator</title>
 </head>
@@ -203,7 +203,7 @@
                     <!-- it is very important, when adding future modules here, that
                         the input id (and the label for-attribute) is h1_xxx_xxx and
                         corresponds EXACTLY to the backend module file which should be
-                        H_XXX_XXX.js. -->
+                        H_XXX_XXX.mjs. -->
                     <ul>
                         <li id="li_h1_none">
                             <input type="radio" name="h1" id="h1_none" checked></input>
