Add States CN, CT, CR combinations

--- a/index.html
+++ b/index.html
@@ -248,12 +248,24 @@
                             <label for="h1_roesy_ad">ROESY (ad.)</label>
                         </li>
                         <li>
-                            <input type="radio" name="h1" id="h1_cosy_tocsy"></input>
-                            <label for="h1_cosy_tocsy">COSY + TOCSY</label>
+                            <input type="radio" name="h1" id="h1_cosy_roesy_st"></input>
+                            <label for="h1_cosy_roesy_st">COSY·ROESY St</label>
                         </li>
                         <li>
                             <input type="radio" name="h1" id="h1_cosy_noesy"></input>
-                            <label for="h1_cosy_noesy">COSY + NOESY</label>
+                            <label for="h1_cosy_noesy">COSY·NOESY EA</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="h1" id="h1_cosy_noesy_st"></input>
+                            <label for="h1_cosy_noesy_st">COSY·NOESY St</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="h1" id="h1_cosy_tocsy"></input>
+                            <label for="h1_cosy_tocsy">COSY·TOCSY EA</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="h1" id="h1_cosy_tocsy_st"></input>
+                            <label for="h1_cosy_tocsy_st">COSY·TOCSY St</label>
                         </li>
                         <li>
                             <input type="radio" name="h1" id="h1_jres"></input>
