--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
             <div class="chooser-overall hsqct">
                 <div class="chooser_text hsqct">
-                    <sup>13</sup>C HSQC-TOCSY
+                    <sup>13</sup>C-<sup>1</sup>H #1
                 </div>
                 <div class="chooser_modules hsqct">
                     <ul>
@@ -135,6 +135,14 @@
                         <li>
                             <input type="radio" name="hsqct" id="hsqct_hsqct"></input>
                             <label for="hsqct_hsqct">HSQC-TOCSY</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="hsqct" id="hsqct_hsqc"></input>
+                            <label for="hsqct_hsqc">HSQC</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="hsqct" id="hsqct_hsqc_f2j"></input>
+                            <label for="hsqct_hsqc_f2j">F2 J-HSQC</label>
                         </li>
                         <!-- devmode -->
                         <li>
@@ -154,6 +162,10 @@
                             <label for="HSQCT_HSQC">HSQCT_HSQC</label>
                         </li>
                         <li>
+                            <input type="radio" name="hsqct" id="HSQCT_HSQC_F2J"></input>
+                            <label for="HSQCT_HSQC_F2J">HSQCT_HSQC_F2J</label>
+                        </li>
+                        <li>
                             <input type="radio" name="hsqct" id="HSQCT_SI"></input>
                             <label for="HSQCT_SI">HSQCT_SI</label>
                         </li>
@@ -163,7 +175,7 @@
 
             <div class="chooser-overall c13">
                 <div class="chooser_text c13">
-                    <sup>13</sup>C–<sup>1</sup>H
+                    <sup>13</sup>C–<sup>1</sup>H #2
                 </div>
                 <div class="chooser_modules c13">
                     <ul>
@@ -177,6 +189,10 @@
                             <label for="c13_hsqc">HSQC</label>
                         </li>
                         <li>
+                            <input type="radio" name="c13" id="c13_hsqc_f2j"></input>
+                            <label for="c13_hsqc_f2j">F2 J-HSQC</label>
+                        </li>
+                        <li>
                             <input type="radio" name="c13" id="c13_sehsqc"></input>
                             <label for="c13_sehsqc">seHSQC</label>
                         </li>
@@ -184,6 +200,10 @@
                         <li>
                             <input type="radio" name="c13" id="C_HSQC"></input>
                             <label for="C_HSQC">C_HSQC</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="c13" id="C_HSQC_F2J"></input>
+                            <label for="C_HSQC_F2J">C_HSQC_F2J</label>
                         </li>
                         <li>
                             <input type="radio" name="c13" id="C_SEHSQC"></input>
