--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <script src="faq.mjs" type="module"></script>
 
     <!-- Thanks, favicon.io -->
-    <link rel="manifest" type="application/manifest+json" href="site.webmanifest">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" type="application/manifest+json" href="static/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
 
     <title>NOAH pulse programme generator</title>
 </head>
