website, pprogs: (experimental) HSQC-COSY module
Needs to be tested on the spectrometer, but seems to work well on
Spinach. Designed to retain both bulk magnetisation as well as any
unused 1J(CH) magnetisation, thus allowing Ernst angle excitation in a
similar way to the HSQC-TOCSY.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
                             <label for="ci13_hsqc_f2j">F2 J-HSQC</label>
                         </li>
                         <li>
+                            <input type="radio" name="ci13" id="ci13_hsqc_cosy"></input>
+                            <label for="ci13_hsqc_cosy">HSQC-COSY</label>
+                        </li>
+                        <li>
                             <input type="radio" name="ci13" id="ci13_hsqc_tocsy"></input>
                             <label for="ci13_hsqc_tocsy">HSQC-TOCSY</label>
                         </li>
@@ -148,6 +152,10 @@
                         <li>
                             <input type="radio" name="ci13" id="CI_HSQC_TOCSY"></input>
                             <label for="CI_HSQC_TOCSY">CI_HSQC_TOCSY</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="c13" id="CI_HSQC_COSY"></input>
+                            <label for="CI_HSQC_COSY">CI_HSQC_COSY</label>
                         </li>
                         <li>
                             <input type="radio" name="ci13" id="CI_HSQC"></input>
