pprogs: implement relayed COSY peak suppression in HSQC-COSY
Tested on the 700 - works really nicely.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <label for="CI_HSQC_TOCSY">CI_HSQC_TOCSY</label>
                         </li>
                         <li>
-                            <input type="radio" name="c13" id="CI_HSQC_COSY"></input>
+                            <input type="radio" name="ci13" id="CI_HSQC_COSY"></input>
                             <label for="CI_HSQC_COSY">CI_HSQC_COSY</label>
                         </li>
                         <li>
