--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
                             <label for="c13_sehsqc">seHSQC</label>
                         </li>
                         <li>
+                            <input type="radio" name="c13" id="c13_hsqc_cosy"></input>
+                            <label for="c13_hsqc_cosy">HSQC-COSY</label>
+                        </li>
+                        <li>
                             <input type="radio" name="c13" id="c13_hsqc_tocsy"></input>
                             <label for="c13_hsqc_tocsy">HSQC-TOCSY</label>
                         </li>
@@ -212,6 +216,10 @@
                         <li>
                             <input type="radio" name="c13" id="C_HSQC_F2J"></input>
                             <label for="C_HSQC_F2J">C_HSQC_F2J</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="c13" id="C_HSQC_COSY"></input>
+                            <label for="C_HSQC_COSY">C_HSQC_COSY</label>
                         </li>
                         <li>
                             <input type="radio" name="c13" id="C_HSQC_TOCSY"></input>
