pprogs, website: add CI_HSQC_COSY_CLIP
C_HSQC_CLIP_COSY is likely to be more useful for the 'outside world',
but I need to somehow demonstrate that this doesn't work.

--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
                             <label for="CI_HSQC_COSY">CI_HSQC_COSY</label>
                         </li>
                         <li>
+                            <input type="radio" name="ci13" id="CI_HSQC_COSY_CLIP"></input>
+                            <label for="CI_HSQC_COSY_CLIP">CI_HSQC_COSY_CLIP</label>
+                        </li>
+                        <li>
                             <input type="radio" name="ci13" id="CI_HSQC_COSY_DSE"></input>
                             <label for="CI_HSQC_COSY_DSE">CI_HSQC_COSY_DSE</label>
                         </li>
