pprogs, website: add C_HSQC_COSY_CLIP

--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
                             <label for="C_HSQC_COSY">C_HSQC_COSY</label>
                         </li>
                         <li>
+                            <input type="radio" name="c13" id="C_HSQC_COSY_CLIP"></input>
+                            <label for="C_HSQC_COSY_CLIP">C_HSQC_COSY_CLIP</label>
+                        </li>
+                        <li>
                             <input type="radio" name="c13" id="C_HSQC_TOCSY"></input>
                             <label for="C_HSQC_TOCSY">C_HSQC_TOCSY</label>
                         </li>
