website: move CSS and font files under static/

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="author" content="Jonathan Yong">
     <meta name="description" content="Website to automatically generate NOAH pulse programmes in Bruker format">
     <link rel="icon" href="data:,"><!-- stops Chrome from asking for a favicon -->
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/modules.css">
-    <link rel="stylesheet" type="text/css" href="css/buttons.css">
+    <link rel="stylesheet" type="text/css" href="static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="static/css/modules.css">
+    <link rel="stylesheet" type="text/css" href="static/css/buttons.css">
 
     <script src="build/frontend.js" type="module"></script>
     <script src="build/faq.js" type="module"></script>
