website: add a warning div
The warnings inside should be updated together with pprog changes.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 
         <h2 id="modules_h2">Module selector</h2>
 
+        <div id="warning">
+            Please do <i>not</i> use two HSQC-TOCSY modules in the same supersequence; there are some bugs.
+            This will be fixed in a future version.
+        </div>
+
         <div id="devmode">
             Developer mode:
             <div class="switch">
